--- a/styles.css
+++ b/styles.css
@@ -54,13 +54,14 @@ p {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     justify-content: space-between;
     margin-top: 24px;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 25px;
     background-color: #333333;
     height: fit-content;
     font-family: "Source Sans 3";
     padding-left: 8px;
     padding-right: 8px;
-    
 }
 
 
@@ -370,5 +371,71 @@ form button {
 
 form button .fa {
     font-size: 16px;
-    color: #ccc;
+    color: #fff;
+}
+
+/*For Random Password Generator*/
+.pass-gen-one{
+background: #fff;
+color: #333333;
+padding: 5%;
+}
+
+.pass-gen-rand {
+    margin: 0;
+    width: 50%;
+    max-width: 700px;
+}
+
+.display {
+    width: 100%;
+    margin-top: 50px;
+    margin-bottom: 30px;
+    background: #fff;
+    color: #333;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 18px 14px;
+    border-radius: 5px;
+    border: 4px solid #333333;
+
+    
+}
+
+.pass-gen-rand h1 span {
+    color: #F48C1C;
+    border-bottom: 4px solid #F48C1C;
+    padding-bottom:7px ;
+}
+
+.display .fa {
+    width: 30px;
+    cursor: pointer;
+    color: #333333;
+}
+
+.display input {
+    outline: 0;
+    font-size: 24px;
+    border: 0;
+}
+
+.pass-gen-one button {
+    border: 0;
+    outline: 0;
+    color: #fff;
+    background: #F48C1C;
+    font-size: 22px;
+    font-weight: 300;
+    display: flex;
+    align-items: center;
+    justify-self: center;
+    padding: 16px 26px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.pass-gen-body {
+    background: #fff;
 }
