--- a/styles.css
+++ b/styles.css
@@ -378,7 +378,8 @@ form button .fa {
 .pass-gen-one{
 background: #fff;
 color: #333333;
-padding: 5%;
+padding-left: 10%;
+padding-top: 5%;
 }
 
 .pass-gen-rand {
@@ -388,7 +389,7 @@ padding: 5%;
 }
 
 .display {
-    width: 100%;
+    width: 115%;
     margin-top: 50px;
     margin-bottom: 30px;
     background: #fff;
@@ -398,19 +399,17 @@ padding: 5%;
     justify-content: space-between;
     padding: 18px 14px;
     border-radius: 5px;
-    border: 4px solid #333333;
-
-    
+    border: 4px solid #333333;  
 }
 
-.pass-gen-rand h1 span {
+.pass-gen-rand h2 span {
     color: #F48C1C;
     border-bottom: 4px solid #F48C1C;
     padding-bottom:7px ;
 }
 
 .display .fa {
-    width: 30px;
+    width: 24px;
     cursor: pointer;
     color: #333333;
 }
@@ -438,4 +437,48 @@ padding: 5%;
 
 .pass-gen-body {
     background: #fff;
+}
+
+.pass-gen {
+    display: flex;
+    justify-content: space-between; /* Ensures columns are spaced apart */
+    background: #fff;
+}
+
+.pass-gen-col {
+    flex: 70%;
+    margin: 0 5px;
+}
+
+#copyIcon {
+    cursor: pointer;
+    padding: 5px;
+    border-radius: 3px;
+    transition: box-shadow 0.3s;
+}
+
+#copyIcon.highlight {
+    box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5);
+}
+
+.customizer {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    margin-top: 5%;
+    margin-left: 10%;
+    padding: 5%;
+    width: 60%;
+
+}
+
+.slider {
+    width: 250px;
+}
+
+.otp-gen h2 span {
+    color: #F48C1C;
+    border-bottom: 4px solid #F48C1C;
+    padding-bottom:7px ;
+    margin-left: 10%;
 }
