--- a/styles.css
+++ b/styles.css
@@ -430,9 +430,14 @@ padding-top: 5%;
     display: flex;
     align-items: center;
     justify-self: center;
+    justify-content: space-between;
     padding: 16px 26px;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.pass-gen-one button i {
+    margin-right: 8px;
 }
 
 .pass-gen-body {
@@ -441,13 +446,14 @@ padding-top: 5%;
 
 .pass-gen {
     display: flex;
-    justify-content: space-between; /* Ensures columns are spaced apart */
+    justify-content: space-around; 
     background: #fff;
+    margin-left: 50px;
+    margin-bottom: 100px;
 }
 
 .pass-gen-col {
-    flex: 70%;
-    margin: 0 5px;
+    flex: 50%;
 }
 
 #copyIcon {
@@ -466,9 +472,11 @@ padding-top: 5%;
     margin-bottom: 30px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     margin-top: 5%;
-    margin-left: 10%;
+    margin-left: 3%;
     padding: 5%;
-    width: 60%;
+    padding-right: 100px;
+    width: 70%;
+    border: 4px solid #333;
 
 }
 
@@ -476,9 +484,38 @@ padding-top: 5%;
     width: 250px;
 }
 
-.otp-gen h2 span {
-    color: #F48C1C;
-    border-bottom: 4px solid #F48C1C;
-    padding-bottom:7px ;
-    margin-left: 10%;
+.otp-gen {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    margin-top: 5%;
+    padding: 3%;
+    width: 40%;
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
+   text-align: center;
+}
+
+.otp-gen input {
+    outline: 0;
+    font-size: 24px;
+    border: 0;
+    width: 400px;
+}
+.otp-gen .display {
+    width: 450px;
+
+}
+
+.nextButton {
+    border-radius: 20px;
+    padding-left: 12px;
+    padding-right: 12px;
+    width: 85px;
+    background-color: #333333;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    border-color: #F48C1C;
+    color: #ffffff;
 }
