--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,7 @@ p {
     z-index: -1;
 }
 
+/*Nav Bar Styling*/
 .headerDiv {
     display: flex;
     width: 98%;
@@ -134,7 +135,7 @@ p {
     height: 100%;
     background: linear-gradient(to top, rgba(255,255,255,0.8) 0%,rgba(255,255,255,0) 100%);
     z-index: -1;
-    pointer-events: none; /* Make the overlay non-interactive */
+    pointer-events: none;
   }
 
 
@@ -631,4 +632,67 @@ button.disable {
     100% {
         margin-left: 0rem;
     }
+}
+
+/*For password game*/
+
+.controller-img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    object-fit: cover;
+    filter: brightness(0.6);
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+.arcade-heading {
+    color: #fff;
+    width: 100%;
+    padding-top: 250px;
+    padding-bottom: 36px;
+    background: rgba(40, 40, 40, 0.5);
+    padding-left: 50px;
+    text-shadow: #000;
+    align-items: center;
+}
+
+.intro h1 {
+    color: #fff;
+    font-size: 70px;
+    font-weight: bolder;
+}
+
+  
+  .container {
+    max-width: 600px;
+    margin: 0 auto;
+  }
+  
+  input[type="text"] {
+    padding: 10px;
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
+  
+  .hint {
+    font-style: italic;
+    margin-top: 10px;
+  }
+  
+
+.overlay2 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(40, 40, 40, 0.5);
+    z-index: -1;
+    pointer-events: none;
+}
+
+.game-box {
+box-shadow: #333;
 }
